<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.genymotion.binocle.IdSampleFragment"
    >

    <TextView
        android:id="@+id/tv_androidId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_id"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encode"
        android:id="@+id/btn_encode"
        android:layout_below="@+id/tv_androidId"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decode"
        android:id="@+id/btn_decode"
        android:layout_alignTop="@+id/btn_encode"
        android:layout_toRightOf="@+id/btn_encode"
        android:layout_toEndOf="@+id/btn_encode"/>

</RelativeLayout>